--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <h1>HW-JS-10</h1>
+    <nav class="page-nav">
+      <ul>
+        <li><a href="./1-timer.html">Timer</a></li>
+        <li><a href="./2-snackbar.html">Snackbar</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
